Alteração quem somos

--- a/quemSomos.html
+++ b/quemSomos.html
@@ -41,16 +41,17 @@
           class="image"
         />
         <p>
-          A marca <strong>Trama Nova</strong> é uma marca prestadora de serviços
-          e é um fruto da minha experiência pessoal em transformar roupas e da
-          minha crença em um futuro mais sustentável. Ao customizar peças para
-          pessoas próximas, percebi o poder da moda para elevar a autoestima e
-          construir uma identidade única. A partir dessa descoberta, decidi
-          criar uma marca que fosse além da mera customização, oferecendo um
-          serviço de qualidade que valoriza a história de cada peça e a
-          individualidade de cada cliente. A Trama Nova é um convite para você
-          se conectar com suas roupas e construir um guarda-roupa que reflita a
-          sua essência. Vitória Albano
+          A <strong>Trama Nova</strong> é uma marca prestadora de serviços que
+          surgiu da experiência pessoal de Vitória Albano em transformar roupas
+          e de sua crença em um futuro mais sustentável. Ao customizar peças
+          para pessoas próximas, Vitória percebeu o poder da moda em elevar a
+          autoestima e construir uma identidade única. Inspirada por essa
+          descoberta, decidiu criar uma marca que vai além da simples
+          customização, oferecendo um serviço de qualidade que valoriza tanto a
+          história de cada peça quanto a individualidade de cada cliente. <br />
+          <br />
+          A Trama Nova é, assim, um convite para que cada pessoa se conecte com
+          suas roupas e construa um guarda-roupa que reflita a sua essência.
         </p>
       </div>
 
